correct nav link from all pages and removed grooming page and made it a section in index. added comments for readablility and attributing source. changed hero text to easter topic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ li{
     list-style-type: none;
 }
 
+.bold{
+    font-weight: bolder;
+    color: aliceblue;
+}
+
 /* Header style */
 
 .header-logo{
@@ -72,14 +77,14 @@ li{
     position: absolute;
     width: inherit;
     height: inherit;
-    top:30%;
+    top: 22%;
     left: 27%;
 }
 
 /* Home page Why Pawesome */
 
-#Why-pawesome-outer{
-    height: 900px;
+.Why-pawesome-outer{
+    height: 800px;
     width:100%;
     overflow: hidden;
     position:relative;
@@ -127,7 +132,7 @@ li{
     margin-right: auto;
     width: 50%;
 }
-
+/* Interactive overlay taken from: https://www.w3schools.com/howto/howto_css_image_overlay.asp */
 .overlay-info{
     position: absolute;
     top: 0;
@@ -159,6 +164,7 @@ li{
     text-shadow:2px 2px black;
 }
 
+/* Media queries taken from: https://gist.github.com/gokulkrishh/242e68d1ee94ad05f488 and  */
 @media screen and (max-width:1200px){
 
 
@@ -167,7 +173,7 @@ li{
 
 /* Packages details */
 
-#packages-outer{
+.packages-outer{
     height: 700px;
     width:100%;
     overflow: hidden;
